--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "morgan": "^1.5.2",
     "multer": "^0.1.8",
     "method-override": "^2.3.0",
-    "body-parser": "^1.9.2"
+    "body-parser": "^1.9.2",
+    "mysql": "2.9.0",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.3.5",
+    "express-session": "^1.11.3"
   }
 }
