--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "requirejs": "2.1.20",
     "requirejs-text": "2.0.14",
     "requirejs-underscore-tpl": "824a9c4e9e",
-    "json2": "c98948ae19"
+    "json2": "c98948ae19",
+    "backbone.syphon": "0.6.2",
+    "backbone.validation": "0.7.1"
   }
 }
