--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport-local": "^1.0.0",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.3.5",
-    "express-session": "^1.11.3"
+    "express-session": "^1.11.3",
+    "bcrypt-nodejs": "0.0.3"
   }
 }
