--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "requirejs-underscore-tpl": "824a9c4e9e",
     "json2": "c98948ae19",
     "backbone.syphon": "0.6.2",
-    "backbone.validation": "0.7.1"
+    "backbone.validation": "0.7.1",
+    "pnotify": "2.0.1"
   }
 }
