--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "cookie-parser": "^1.3.5",
     "express-session": "^1.11.3",
     "bcrypt-nodejs": "0.0.3",
-    "csurf": "1.8.3"
+    "csurf": "^1.8.3",
+    "puid": "^1.0.5",
+    "validator": "^4.0.5",
+    "nodemailer": "^1.4.0",
+    "uuid": "^2.0.1"
   }
 }
