--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "hbs": "~2.4.0",
     "morgan": "^1.5.2",
     "multer": "^0.1.8",
-    "method-override": "^2.3.0",
+    "method-override": "^2.3.5",
     "body-parser": "^1.9.2",
     "mysql": "2.9.0",
     "passport": "^0.2.2",
@@ -20,6 +20,14 @@
     "puid": "^1.0.5",
     "validator": "^4.0.5",
     "nodemailer": "^1.4.0",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "cookie-session": "^1.2.0",
+    "s3": "^4.4.0",
+    "walk": "^2.3.9",
+    "node-uuid": "^1.4.3",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.10.6",
+    "string": "^3.3.1",
+    "aws-sdk": "^2.2.0"
   }
 }
