--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "json2": "c98948ae19",
     "backbone.syphon": "0.6.2",
     "backbone.validation": "0.7.1",
-    "pnotify": "2.0.1"
+    "pnotify": "2.0.1",
+    "jquery-typewatch": "2.2.2"
   }
 }
