--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "backbone.syphon": "0.6.2",
     "backbone.validation": "0.7.1",
     "pnotify": "2.0.1",
-    "jquery-typewatch": "2.2.2"
+    "jquery-typewatch": "2.2.2",
+    "backbone.paginator": "2.0.2"
   }
 }
