--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "backbone.validation": "0.7.1",
     "pnotify": "2.0.1",
     "jquery-typewatch": "2.2.2",
-    "backbone.paginator": "2.0.2"
+    "backbone.paginator": "2.0.2",
+    "codemirror": "5.7.0"
   }
 }
