--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "pnotify": "2.0.1",
     "jquery-typewatch": "2.2.2",
     "backbone.paginator": "2.0.2",
-    "codemirror": "5.7.0"
+    "codemirror": "5.7.0",
+    "moment": "2.10.6"
   }
 }
