--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "backbone.paginator": "2.0.2",
     "codemirror": "5.7.0",
     "moment": "2.10.6",
-    "datatables": "1.10.10"
+    "datatables": "1.10.10",
+    "bootstrap-fileinput": "4.2.8"
   }
 }
