landers last_updated shows clients timezone, add new lander correctly displays new lander after add and is sorted, live updater updated to also check if job is finished

--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "backbone.paginator": "2.0.2",
     "codemirror": "5.7.0",
     "moment": "2.10.6",
+    "moment-timezone": "0.4.1",
     "datatables": "1.10.10",
-    "bootstrap-fileinput": "4.2.8"
+    "bootstrap-fileinput": "4.2.8",
+    "jstz": "1af1e80448"
   }
 }
