snippets gui initial, catch some more db errors

--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -5,6 +5,7 @@
   },
   "html": {
   	"indent_char": " ",
-  	"indent_size": 2
+  	"indent_size": 2,
+  	"allowed_file_extensions": ["html", "tpl"]
   }
 }
