active snippets gui update

--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "moment-timezone": "0.4.1",
     "datatables": "1.10.10",
     "bootstrap-fileinput": "4.2.8",
-    "jstz": "1af1e80448"
+    "jstz": "1af1e80448",
+    "select2": "4.0.1"
   }
 }
