--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ public/vendor/bower_installed
 logs
 *.log
 .DS_Store
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
