if change api key to diff account auto bring over users landers/snippets

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "puid": "^1.0.5",
     "s3": "^4.4.0",
     "string": "^3.3.1",
+    "rimraf": "2.5.1",
     "uuid": "^2.0.1",
     "validator": "^4.0.5",
     "walk": "^2.3.9"
