--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "rimraf": "2.5.1",
     "s3": "4.4.0",
     "string": "3.3.1",
+    "underscore-node": "^0.1.2",
     "uuid": "2.0.1",
     "validator": "4.0.5",
-    "walk": "2.3.9"
+    "walk": "2.3.9",
+    "xoauth2": "^1.1.0"
   }
 }
