--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "uuid": "2.0.1",
     "validator": "4.0.5",
     "walk": "2.3.9",
+    "website-scraper": "^0.3.3",
     "xoauth2": "^1.1.0"
   }
 }
