--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aws-sdk": "2.2.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.9.2",
+    "compression": "^1.6.1",
     "connect-ensure-login": "0.1.1",
     "cookie-parser": "1.3.5",
     "cookie-session": "1.2.0",
