--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,10 @@
 {
-  "name": "MoonLander",
+  "name": "landerds",
   "version": "1.0.0",
   "authors": [
-    "Troy Jaeger",
     "Trevor Alfstad"
   ],
-  "homepage": "www.buildcave.com",
+  "homepage": "www.landerds.com",
   "dependencies": {
     "bootstrap": "3.3.5",
     "jquery": "2.1.4",
