--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "find": "0.2.4",
     "hbs": "2.4.0",
     "html-minifier": "1.5.0",
+    "imagemin": "^4.0.0",
     "method-override": "2.3.5",
     "mkdirp": "0.5.1",
     "moment": "2.10.6",
