--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "s3": "4.4.0",
     "string": "3.3.1",
     "underscore-node": "^0.1.2",
+    "util": "0.10.3",
     "uuid": "2.0.1",
     "validator": "4.0.5",
     "walk": "2.3.9",
