--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-  "name": "MoonLander",
+  "name": "LanderDS",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "aws-sdk": "2.3.3",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "1.9.2",
-    "compression": "^1.6.1",
-    "connect-ensure-login": "0.1.1",
-    "cookie-parser": "1.3.5",
-    "cookie-session": "1.2.0",
-    "csurf": "1.8.3",
-    "deferred": "0.7.3",
-    "express": "4.13.3",
-    "express-session": "1.11.3",
-    "find": "0.2.4",
-    "hbs": "2.4.0",
-    "html-minifier": "1.5.0",
-    "imagemin": "^4.0.0",
-    "method-override": "2.3.5",
-    "mkdirp": "0.5.1",
-    "moment": "2.10.6",
-    "morgan": "1.5.2",
-    "multer": "0.1.8",
-    "mysql": "2.9.0",
-    "node-uuid": "1.4.3",
-    "nodemailer": "1.4.0",
-    "passport": "0.2.2",
-    "passport-local": "1.0.0",
-    "puid": "1.0.5",
-    "requirejs": "2.1.22",
-    "rimraf": "2.5.1",
-    "s3": "4.4.0",
-    "string": "3.3.1",
-    "underscore-node": "^0.1.2",
-    "util": "0.10.3",
-    "uuid": "2.0.1",
-    "validator": "4.0.5",
-    "walk": "2.3.9",
-    "website-scraper": "^0.3.3",
-    "xoauth2": "^1.1.0",
-    "yuicompressor": "2.4.8"
+    "aws-sdk": "*",
+    "bcrypt-nodejs": "*",
+    "body-parser": "*",
+    "compression": "*",
+    "connect-ensure-login": "*",
+    "cookie-parser": "*",
+    "cookie-session": "*",
+    "csurf": "*",
+    "deferred": "*",
+    "express": "*",
+    "express-session": "*",
+    "find": "*",
+    "hbs": "*",
+    "html-minifier": "*",
+    "imagemin": "*",
+    "method-override": "*",
+    "mkdirp": "*",
+    "moment": "*",
+    "morgan": "*",
+    "multer": "*",
+    "mysql": "*",
+    "node-uuid": "*",
+    "nodemailer": "*",
+    "passport": "*",
+    "passport-local": "*",
+    "puid": "*",
+    "requirejs": "*",
+    "rimraf": "*",
+    "s3": "*",
+    "string": "*",
+    "underscore-node": "*",
+    "util": "*",
+    "uuid": "*",
+    "validator": "*",
+    "walk": "*",
+    "website-scraper": "*",
+    "xoauth2": "*",
+    "yuicompressor": "*"
   }
 }
