deployments to dev, test, and production working. deploys built version no need for docker container to npm install/bower install :)

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,24 +1,14 @@
 branch-defaults:
-  default:
-    environment: landerds
-    group_suffix: test
   local:
-    environment: landerds-test
-    group_suffix: null
-  prod:
-    environment: landerds
-    group_suffix: prod
-  test:
-    environment: landerds
-    group_suffix: test
-    option_settings:
-    - namespace: aws:autoscaling:launchconfiguration
-      option_name: SecurityGroups
-      value: sg-f9cf359f
+    environment: test
+  master:
+    environment: prod
 global:
   application_name: landerds-app
   default_ec2_keyname: BuildcaveKeyPair
-  default_platform: python2.7
+  default_platform: 64bit Amazon Linux 2016.03 v2.1.0 running Docker 1.9.1
   default_region: us-west-2
   profile: null
   sc: git
+deploy:
+  artifact: "built.zip"
