--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "async": "*",
     "aws-sdk": "*",
-    "forEachAsync": "*",
     "bcrypt-nodejs": "*",
     "body-parser": "*",
     "compression": "*",
@@ -48,6 +47,7 @@
     "validator": "*",
     "walk": "*",
     "website-scraper": "*",
+    "wordpress-hash-node": "^1.0.0",
     "xoauth2": "*",
     "yuicompressor": "*"
   },
