add new lander not a job anymore :D validation correction for add new lander, reorganized landers in db_api so we have a common file there

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "deferred": "*",
     "express": "*",
     "express-session": "*",
+    "extract-zip": "^1.5.0",
     "find": "*",
     "hbs": "*",
     "html-minifier": "*",
