updates for critical css optimization

--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "connect-ensure-login": "*",
     "cookie-parser": "*",
     "cookie-session": "*",
+    "critical": "addyosmani/critical#a4eea4bd41c547d00acaf31e4412c6e58d25308f",
     "csurf": "*",
     "deferred": "*",
     "express": "*",
     "express-session": "*",
-    "extract-zip": "^1.5.0",
+    "extract-zip": "*",
     "find": "*",
     "hbs": "*",
     "html-minifier": "*",
     "imagemin": "*",
-    "imagemin-mozjpeg": "^6.0.0",
-    "imagemin-pngquant": "^5.0.0",
+    "imagemin-mozjpeg": "*",
+    "imagemin-pngquant": "*",
     "method-override": "*",
     "mkdirp": "*",
     "moment": "*",
@@ -40,6 +41,7 @@
     "passport": "*",
     "passport-local": "*",
     "puid": "*",
+    "purifycss": "*",
     "requirejs": "*",
     "rimraf": "*",
     "s3": "*",
@@ -50,7 +52,7 @@
     "validator": "*",
     "walk": "*",
     "website-scraper": "*",
-    "wordpress-hash-node": "^1.0.0",
+    "wordpress-hash-node": "*",
     "xoauth2": "*",
     "yuicompressor": "*"
   },
