set up sessions using redis

--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "body-parser": "*",
     "compression": "*",
     "connect-ensure-login": "*",
+    "connect-redis": "^3.1.0",
     "cookie-parser": "*",
     "cookie-session": "*",
     "critical": "addyosmani/critical#a4eea4bd41c547d00acaf31e4412c6e58d25308f",
     "csurf": "*",
     "deferred": "*",
-    "express": "*",
-    "express-session": "*",
+    "express": "4.13.4",
+    "express-session": "1.13.0",
     "extract-zip": "*",
     "find": "*",
     "hbs": "*",
@@ -42,6 +43,7 @@
     "passport-local": "*",
     "puid": "*",
     "purifycss": "*",
+    "redis": "^2.6.2",
     "requirejs": "*",
     "rimraf": "*",
     "s3": "*",
