added optimizer which completely optimizes the css and inlines it, etc.

--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "aws-sdk": "*",
     "bcrypt-nodejs": "*",
     "body-parser": "*",
+    "clean-css": "^3.4.18",
     "compression": "*",
     "connect-ensure-login": "*",
     "connect-redis": "^3.1.0",
     "cookie-parser": "*",
     "cookie-session": "*",
-    "critical": "addyosmani/critical#a4eea4bd41c547d00acaf31e4412c6e58d25308f",
+    "critical": "^0.7.3",
     "csurf": "*",
     "deferred": "*",
     "express": "4.13.4",
@@ -42,7 +43,7 @@
     "passport": "*",
     "passport-local": "*",
     "puid": "*",
-    "purifycss": "*",
+    "purify-css": "^1.1.9",
     "redis": "^2.6.2",
     "requirejs": "*",
     "rimraf": "*",
@@ -61,8 +62,10 @@
   "devDependencies": {
     "exec": "^0.2.1",
     "mkdirp": "^0.5.1",
+    "find": "*",
     "node-cmd": "^1.1.1",
     "requirejs": "^2.2.0",
+    "yuicompressor": "*",
     "rimraf": "^2.5.2",
     "rsync": "^0.4.0",
     "zip-folder": "^1.0.0"
