add endpoints to db and return on add lander

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nodemailer": "*",
     "passport": "*",
     "passport-local": "*",
+    "psi": "^2.0.4",
     "puid": "*",
     "purify-css": "^1.1.9",
     "redis": "^2.6.2",
