--- a/.elasticbeanstalk/saved_configs/prod.cfg.yml
+++ b/.elasticbeanstalk/saved_configs/prod.cfg.yml
@@ -35,7 +35,7 @@ OptionSettings:
     SecurityGroups: sg-383bf45e
     RootVolumeSize: '10'
     IamInstanceProfile: aws-elasticbeanstalk-ec2-role
-    InstanceType: t1.micro
+    InstanceType: t2.small
     EC2KeyName: BuildcaveKeyPair
   aws:autoscaling:asg:
     MinSize: '1'
