--- a/package.json
+++ b/package.json
@@ -61,12 +61,12 @@
     "xoauth2": "*",
     "yuicompressor": "*",
     "forEachAsync": "*",
-    "node-cmd": "^1.1.1"
+    "node-cmd": "^1.1.1",
+    "zip-dir": "^1.0.2"
   },
   "devDependencies": {
-    "exec": "^0.2.1",
-    "rsync": "^0.4.0",
     "zip-dir": "^1.0.2",
-    "zip-folder": "^1.0.0"
+    "exec": "^0.2.1",
+    "rsync": "^0.4.0"
   }
 }
