added JS optimization for each endpoint

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "*",
     "bcrypt-nodejs": "*",
     "body-parser": "*",
+    "cheerio": "*",
     "clean-css": "^3.4.18",
     "compression": "*",
     "connect-ensure-login": "*",
@@ -27,17 +28,16 @@
     "express-session": "1.13.0",
     "extract-zip": "*",
     "find": "*",
+    "forEachAsync": "*",
     "hbs": "*",
     "html-minifier": "*",
-    "imagemin": "*",
-    "imagemin-mozjpeg": "*",
-    "imagemin-pngquant": "*",
     "method-override": "*",
     "mkdirp": "*",
     "moment": "*",
     "morgan": "*",
     "multer": "*",
     "mysql": "*",
+    "node-cmd": "^1.1.1",
     "node-uuid": "*",
     "nodemailer": "*",
     "passport": "*",
@@ -46,6 +46,7 @@
     "puid": "*",
     "purify-css": "^1.1.9",
     "redis": "^2.6.2",
+    "request": "^2.73.0",
     "requirejs": "*",
     "rimraf": "*",
     "s3": "*",
@@ -53,15 +54,12 @@
     "underscore-node": "*",
     "util": "*",
     "uuid": "*",
-    "cheerio": "*",
     "validator": "*",
     "walk": "*",
     "website-scraper": "*",
     "wordpress-hash-node": "*",
     "xoauth2": "*",
     "yuicompressor": "*",
-    "forEachAsync": "*",
-    "node-cmd": "^1.1.1",
     "zip-dir": "^1.0.2"
   },
   "devDependencies": {
