--- a/.elasticbeanstalk/saved_configs/test.cfg.yml
+++ b/.elasticbeanstalk/saved_configs/test.cfg.yml
@@ -44,11 +44,11 @@ OptionSettings:
     SecurityGroups: sg-383bf45e
     RootVolumeSize: '10'
     IamInstanceProfile: aws-elasticbeanstalk-ec2-role
-    InstanceType: m4.large
+    InstanceType: m1.medium
     EC2KeyName: BuildcaveKeyPair
   aws:autoscaling:asg:
-    MinSize: '2'
-    MaxSize: '10'
+    MinSize: '1'
+    MaxSize: '2'
   aws:autoscaling:updatepolicy:rollingupdate:
     RollingUpdateType: Health
     RollingUpdateEnabled: true
