only rip files local to url, npm install custom scraper

--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
     "uglify-js": "^2.7.0",
     "underscore": "^1.8.3",
     "underscore-node": "*",
+    "url": "^0.11.0",
     "util": "*",
     "uuid": "*",
     "valid-url": "^1.0.9",
     "validator": "*",
     "walk": "*",
-    "website-scraper": "*",
     "wordpress-hash-node": "*",
     "xoauth2": "*",
     "yslowjs": "0.3.3",
