scrape resources for html

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-minifier": "*",
     "method-override": "*",
     "mkdirp": "*",
+    "mkpath": "^1.0.0",
     "moment": "*",
     "morgan": "*",
     "multer": "*",
