--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "jstz": "1af1e80448",
     "select2": "4.0.1",
     "fancybox": "~2.1.5",
-    "highcharts": "^4.2.5"
+    "highcharts": "^4.2.5",
+    "summernote": "^0.8.2"
   },
   "devDependencies": {
     "almond": "^0.3.2"
