--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "devDependencies": {
     "zip-dir": "^1.0.2",
     "exec": "^0.2.1",
+    "node-cp": "*",
     "yuicompressor": "*",
     "rsync": "^0.4.0"
   }
