--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "forEachAsync": "*",
     "hbs": "*",
     "html-minifier": "*",
+    "intercom-client": "^2.8.5",
     "method-override": "*",
     "mkdirp": "*",
     "mkpath": "^1.0.0",
