--- a/bower.json
+++ b/bower.json
@@ -30,8 +30,7 @@
     "select2": "4.0.1",
     "fancybox": "~2.1.5",
     "highcharts": "^4.2.5",
-    "summernote": "^0.8.2",
-    "jquery-smooth-scrolling": "^1.5.2"
+    "summernote": "^0.8.2"
   },
   "devDependencies": {
     "almond": "^0.3.2"
