documentation navspy, resize, padding, init .5 screen height, max/mins for resize, z-index updates

--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "select2": "4.0.1",
     "fancybox": "~2.1.5",
     "highcharts": "^4.2.5",
-    "summernote": "^0.8.2"
+    "summernote": "^0.8.2",
+    "interact": "^1.2.6"
   },
   "devDependencies": {
     "almond": "^0.3.2"
