sidebar fixed, resize css fixed

--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "fancybox": "~2.1.5",
     "highcharts": "^4.2.5",
     "summernote": "^0.8.2",
-    "interact": "^1.2.6"
+    "interact": "^1.2.6",
+    "nanoscroller": "^0.8.7"
   },
   "devDependencies": {
     "almond": "^0.3.2"
