--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ node_js:
   - "4"
 before_install:
   - chmod +x ./build_scripts/build.js
+  - npm install
 install: 
   - node ./build_scripts/build.js
