install bower for build travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 before_install:
   - chmod +x ./build_scripts/build.js
   - npm install
+  - npm install -g bower
   - bower install
 install: 
   - node ./build_scripts/build.js
